syntax = "proto3";

import "ccsds/schema/cdm.proto";
import "ccsds/schema/oem.proto";
import "ccsds/schema/opm.proto";

package trace;

service Trace {
    // Uploads a single CCSDS data message.
    // Failures are indicated using gRPC error codes.
    //
    // *Note*: This method can be called within a loop for batch data uploads.
    rpc UploadData(UploadDataRequest) returns (EmptyResponse) {};

    // upload XML data message
    rpc UploadXMLData(UploadXMLDataRequest) returns (EmptyResponse) {};

    // Find any hies and process.
    rpc processNegotiations(EmptyRequest) returns (EmptyResponse) {};
}

// CCSDS data message in protocol buffer format (i.e., CDM, TDM, ...).
message DataMessage {
    oneof data {
      // CCSDS Conjunction Data Message (CDM).
      ccsds.schema.CdmType cdm = 1;
      // CCSDS Orbit Message (OEM).
      ccsds.schema.OemType oem = 2;
      // CCSDS Tracking Data Message (OPM).
      ccsds.schema.OpmType opm = 3;
    }
}

// CCSDS data upload request.
message UploadXMLDataRequest {
    // CCSDS data message to upload.
    string msg = 1;
}

// CCSDS data upload request.
message UploadDataRequest {
    // CCSDS data message to upload.
    DataMessage msg = 1;
    // Signature of the data message encoded in proto3 binary format, using the originators private ECDSA key.
    string signature = 2;
}

message EmptyRequest {
}
  
message EmptyResponse {
}